--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <main>
         <img class="fecha" src="./imagenes/1.png" alt="">
         <img class="ubiRio" src="./imagenes/2.png" alt="">
-        <img class="vestimenta" src="./imagenes/3.png" alt="">
-        <img class="alias" src="./imagenes/4.png" alt="">
+        <!-- <img class="vestimenta" src="./imagenes/3.png" alt="">
+        <img class="alias" src="./imagenes/4.png" alt=""> -->
 
         <div class="marca">
         © 2025 Tobías Crugnale
