--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="./imagenes/rio.ico" type="image/x-icon">
 </head>
-<body id="bg">
+<body >
    
     <main>
         <img class="fecha" src="./imagenes/1.png" alt="">
