--- a/index.html
+++ b/index.html
@@ -10,18 +10,12 @@
 <body>
    
     <main>
-        <img class="fecha" src="./imagenes/1.png" alt="">
-        <img class="ubiRio" src="./imagenes/2.png" alt="">
-        <!-- <img class="vestimenta" src="./imagenes/3.png" alt="">
-        <img class="alias" src="./imagenes/4.png" alt=""> -->
-
-        <div class="marca">
-        © 2025 Tobías Crugnale
-        <a href="https://www.instagram.com/tobi_crugnale?igsh=dmFod3VlaDBlajFx&utm_source=qr" target="_blank">
-            <span><img class="logoInsta" src="./imagenes/instagram.png" alt=""> Tobi_Crugnale</span>
-        </a>
-        
-        </div>
+        <img class="fecha" src="./imagenes/1.jpeg" alt="">
+        <img class="ubiRio" src="./imagenes/2.jpeg" alt="">
+        <img class="vestimenta" src="./imagenes/3.jpeg" alt="">
+        <!-- <img class="alias" src="./imagenes/4.png" alt="">
+ -->
+   
     
     </main>
     <footer>
